--- a/Front End/MessagingApp/android/app/build.gradle
+++ b/Front End/MessagingApp/android/app/build.gradle
@@ -74,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.messagingapp"
+    namespace "com.wannachat"
     defaultConfig {
-        applicationId "com.messagingapp"
+        applicationId "com.wannachat"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
