--- a/Front End/MessagingApp/ios/Podfile
+++ b/Front End/MessagingApp/ios/Podfile
@@ -14,7 +14,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'WannaChat' do
+target 'MessagingApp' do
   config = use_native_modules!
 
   use_react_native!(
@@ -23,7 +23,7 @@ target 'WannaChat' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'WannaChatTests' do
+  target 'MessagingAppTests' do
     inherit! :complete
     # Pods for testing
   end
