--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-native": "^0.74.2",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0"
