--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,15 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.10.0",
-    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "^2.17.1",
-    "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0"
+    "react-native": "0.74.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
