--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.0",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
