--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.3.4",
     "react-native-paper": "^5.12.4",
+    "react-native-rsa-native": "^2.0.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0"
   },
