--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/native-stack": "^6.10.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.3.4",
     "react-native-paper": "^5.12.4",
@@ -33,6 +35,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
+    "@types/react-native-get-random-values": "^1.8.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
