--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,7 +24,8 @@
     "react-native-paper": "^5.12.4",
     "react-native-rsa-native": "^2.0.5",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
