--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.0",
@@ -25,7 +26,8 @@
     "react-native-rsa-native": "^2.0.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "signalr-client": "^0.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
