--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "signalr-client": "^0.0.20"
   },
   "devDependencies": {
