--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.0",
+    "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
     "react-native-pager-view": "^6.3.4",
