--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
