--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,6 +9,6 @@
   "JwtSettings": {
     "Issuer": "WannaChat",
     "Audience": "WannaChat",
-    "Key": "]A(;-ZD0#V9Q#%$5p_eRRQ&wx^<hoA>NOvczkv#<B$GMsnXn-f>LIm~ingLIL3K" 
+    "Key": "XXX" 
   }
 }
