--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,6 +9,6 @@
   "JwtSettings": {
     "Issuer": "WannaChat",
     "Audience": "WannaChat",
-    "Key": "XXX" 
+    "Key": "d4f3d65e9a1b0c9e7a8f6b9d48e1f2a1" 
   }
 }
