--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-draggable": "^3.3.0",
     "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^8.2.0",
