--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "^3.32.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-video": "^6.6.3",
     "react-native-webrtc": "^124.0.4",
     "signalr-client": "^0.0.20"
   },
